[package]
name = "apt-release-file"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Library for serializing / deserializing apt dist release files"
license = "MIT"
readme = "README.md"
keywords = ["apt", "release", "linux"]

[dependencies]
cascade = "0.1"
chrono = "0.4"
deb-architectures = "0.1"
smart-default = "0.6"
